# ChangeLog for x11-base/xorg-x11
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.166 2004/10/19 07:53:08 spyderous Exp $

  19 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Move some variables to locals. Note that all of this cleanup is thanks to
  mr_bones.

  19 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Change negative uses to bash style instead of portage-specific one.

  18 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Replace all commands in backticks `` with commands in $().

  18 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild, xorg-x11-6.8.0-r2.ebuild:
  Combine two consecutive instances of "use ! bitmap-fonts."

  18 Oct 2004; Stephen P. Becker <geoman@gentoo.org>
  xorg-x11-6.8.0-r1.ebuild:
  stable on mips wrt bug 67326

  18 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r2.ebuild:
  Commit initial changes for moving /usr/X11R6/lib to /usr/lib.

  17 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild, xorg-x11-6.8.0-r2.ebuild:
  Fix problem for lib64 get_libdir users that resulted in *.la files not being
  installed (#67729).

  14 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.7.0-r2.ebuild, xorg-x11-6.8.0-r1.ebuild,
  xorg-x11-6.8.0-r2.ebuild:
  Update ebuild to reflect that gcc-getCC no longer exports CC.

  13 Oct 2004; Travis Tilley <lv@gentoo.org> xorg-x11-6.8.0-r1.ebuild:
  stable on amd64

  13 Oct 2004; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.0-r1.ebuild, xorg-x11-6.8.0-r2.ebuild:
  Bad logic on BuildXprintLib. It should've been defined only when the rest of
  xprint WASN'T built, because when xprint is built, it's turned on
  automatically (#67400).

  13 Oct 2004; Guy Martin <gmsoft@gentoo.org> xorg-x11-6.8.0-r1.ebuild:
  Stable on hppa.
