@@ -1,8 +1,8 @@
 MD5 36a69eed0e585f3dcf096cc82ac54575 metadata.xml 230
-MD5 02b558bb41deebf39c59dd92a8508fd7 xorg-x11-6.8.0-r2.ebuild 43496
+MD5 fce9fef35d73d83520bfbfd5b7d26613 xorg-x11-6.8.0-r2.ebuild 43675
 MD5 ca34ddd369d94ea86b0774e029f54efb xorg-x11-6.7.0-r2.ebuild 38072
 MD5 c81b82b9a07e0975156358918886607e xorg-x11-6.8.0-r1.ebuild 41319
-MD5 d587d5bc316b021733c1042d0b422381 ChangeLog 36540
+MD5 c044b56f2a58010a05e88c10f10ebb78 ChangeLog 36717
 MD5 5f6772219f532c3baf3fb3ceecf1ab65 files/digest-xorg-x11-6.8.0-r2 906
 MD5 a3314fbdc270d7d84ea14fd477b8d048 files/digest-xorg-x11-6.7.0-r2 904
 MD5 70facbdb85b7ef2bc9b9b702442eda7e files/digest-xorg-x11-6.8.0-r1 908
